k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "nhlbet-site-ingress"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - nhl.mysportsbet.ca
      secretName: nhlbet-site-tls
  rules:
  - host: nhl.mysportsbet.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nhlbet-site
            port:
              number: 80
